# IoT-analytics

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: home.html  login.html  profile.html
config/: asgi.py  settings.py  urls.py
iot/: admin.py  consumers.py  models.py  mqtt_client.py  routing.py  simulate_device.py
iot/migrations/: 0001_initial.py
nginx/: default.conf
templates/: base.html
